// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add error: does not exist 1`] = `
Object {
  "error": [DendronError: seed dendron.no-exist does not exist],
}
`;

exports[`add ok: exists 1`] = `".git .gitignore dendron.code-workspace dendron.yml seed.yml vault"`;

exports[`add ok: exists 2`] = `"dendron.code-workspace dendron.yml hooks seeds vault1 vault2 vault3"`;

exports[`add ok: exists 3`] = `
"version: 5
useFMTitle: true
useNoteTitleForLink: true
mermaid: true
useKatex: true
dev:
    enablePreviewV2: true
commands:
    lookup:
        note:
            selectionMode: extract
            confirmVaultOnCreate: true
            vaultSelectionModeOnCreate: smart
            leaveTrace: false
            bubbleUpCreateNew: true
            fuzzThreshold: 0.2
    randomNote: {}
    insertNote:
        initialValue: templates
    insertNoteLink:
        aliasMode: none
        enableMultiSelect: false
    insertNoteIndex:
        enableMarker: false
workspace:
    vaults:
        -
            fsPath: vault
            seed: dendron.foo
            name: dendron.foo
        -
            fsPath: vault1
        -
            fsPath: vault2
        -
            fsPath: vault3
            name: vaultThree
    journal:
        dailyDomain: daily
        name: journal
        dateFormat: y.MM.dd
        addBehavior: childOfDomain
    scratch:
        name: scratch
        dateFormat: y.MM.dd.HHmmss
        addBehavior: asOwnDomain
    task:
        name: ''
        dateFormat: ''
        addBehavior: childOfCurrent
        statusSymbols:
            '': ' '
            wip: w
            done: x
            assigned: a
            moved: m
            blocked: b
            delegated: l
            dropped: d
            pending: 'y'
        prioritySymbols:
            H: high
            M: medium
            L: low
        todoIntegration: false
        createTaskSelectionType: selection2link
    graph:
        zoomSpeed: 1
    enableAutoCreateOnDefinition: false
    enableXVaultWikiLink: false
    enableRemoteVaultInit: true
    enableUserTags: true
    enableHashTags: true
    workspaceVaultSyncMode: noCommit
    enableAutoFoldFrontmatter: false
    enableEditorDecorations: true
    maxPreviewsCached: 10
    maxNoteLength: 204800
    seeds:
        dendron.foo: {}
preview:
    enableFMTitle: true
    enableNoteTitleForLink: true
    enableMermaid: true
    enablePrettyRefs: true
    enableKatex: true
    automaticallyShowPreview: false
publishing:
    copyAssets: true
    enablePrettyRefs: true
    siteHierarchies:
        - root
    writeStubs: false
    enableContainers: false
    generateChangelog: false
    siteRootDir: docs
    seo:
        title: Dendron
        description: Personal Knowledge Space
    github:
        enableEditLink: true
        editLinkText: Edit this page on GitHub
        editBranch: main
        editViewMode: tree
    enableSiteLastModified: true
    enableFrontmatterTags: true
    enableHashesForFMTags: false
    enableRandomlyColoredTags: true
    enablePrettyLinks: true
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
"
`;

exports[`add ok: exists 4`] = `
"{
    \\"folders\\": [
        {
            \\"path\\": \\"seeds/dendron.foo/vault\\",
            \\"name\\": \\"dendron.foo\\"
        },
        {
            \\"path\\": \\"vault1\\"
        },
        {
            \\"path\\": \\"vault2\\"
        },
        {
            \\"path\\": \\"vault3\\",
            \\"name\\": \\"vaultThree\\"
        }
    ],
    \\"settings\\": {},
    \\"extensions\\": {}
}"
`;

exports[`add ok: seed with site 1`] = `".git .gitignore dendron.code-workspace dendron.yml seed.yml vault"`;

exports[`add ok: seed with site 2`] = `"dendron.code-workspace dendron.yml hooks seeds vault1 vault2 vault3"`;

exports[`add ok: seed with site 3`] = `
"version: 5
useFMTitle: true
useNoteTitleForLink: true
mermaid: true
useKatex: true
dev:
    enablePreviewV2: true
commands:
    lookup:
        note:
            selectionMode: extract
            confirmVaultOnCreate: true
            vaultSelectionModeOnCreate: smart
            leaveTrace: false
            bubbleUpCreateNew: true
            fuzzThreshold: 0.2
    randomNote: {}
    insertNote:
        initialValue: templates
    insertNoteLink:
        aliasMode: none
        enableMultiSelect: false
    insertNoteIndex:
        enableMarker: false
workspace:
    vaults:
        -
            fsPath: vault
            seed: dendron.foo
            name: dendron.foo
        -
            fsPath: vault1
        -
            fsPath: vault2
        -
            fsPath: vault3
            name: vaultThree
    journal:
        dailyDomain: daily
        name: journal
        dateFormat: y.MM.dd
        addBehavior: childOfDomain
    scratch:
        name: scratch
        dateFormat: y.MM.dd.HHmmss
        addBehavior: asOwnDomain
    task:
        name: ''
        dateFormat: ''
        addBehavior: childOfCurrent
        statusSymbols:
            '': ' '
            wip: w
            done: x
            assigned: a
            moved: m
            blocked: b
            delegated: l
            dropped: d
            pending: 'y'
        prioritySymbols:
            H: high
            M: medium
            L: low
        todoIntegration: false
        createTaskSelectionType: selection2link
    graph:
        zoomSpeed: 1
    enableAutoCreateOnDefinition: false
    enableXVaultWikiLink: false
    enableRemoteVaultInit: true
    enableUserTags: true
    enableHashTags: true
    workspaceVaultSyncMode: noCommit
    enableAutoFoldFrontmatter: false
    enableEditorDecorations: true
    maxPreviewsCached: 10
    maxNoteLength: 204800
    seeds:
        dendron.foo:
            site:
                url: 'https://foo.com'
                index: foo
preview:
    enableFMTitle: true
    enableNoteTitleForLink: true
    enableMermaid: true
    enablePrettyRefs: true
    enableKatex: true
    automaticallyShowPreview: false
publishing:
    copyAssets: true
    enablePrettyRefs: true
    siteHierarchies:
        - root
    writeStubs: false
    enableContainers: false
    generateChangelog: false
    siteRootDir: docs
    seo:
        title: Dendron
        description: Personal Knowledge Space
    github:
        enableEditLink: true
        editLinkText: Edit this page on GitHub
        editBranch: main
        editViewMode: tree
    enableSiteLastModified: true
    enableFrontmatterTags: true
    enableHashesForFMTags: false
    enableRandomlyColoredTags: true
    enablePrettyLinks: true
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
"
`;

exports[`add ok: seed with site 4`] = `
"{
    \\"folders\\": [
        {
            \\"path\\": \\"seeds/dendron.foo/vault\\",
            \\"name\\": \\"dendron.foo\\"
        },
        {
            \\"path\\": \\"vault1\\"
        },
        {
            \\"path\\": \\"vault2\\"
        },
        {
            \\"path\\": \\"vault3\\",
            \\"name\\": \\"vaultThree\\"
        }
    ],
    \\"settings\\": {},
    \\"extensions\\": {}
}"
`;

exports[`init convert workspace error: no vaults 1`] = `"dendron.code-workspace dendron.yml hooks"`;

exports[`init convert workspace error: no vaults 2`] = `
"version: 5
useFMTitle: true
useNoteTitleForLink: true
mermaid: true
useKatex: true
dev:
    enablePreviewV2: true
commands:
    lookup:
        note:
            selectionMode: extract
            confirmVaultOnCreate: true
            vaultSelectionModeOnCreate: smart
            leaveTrace: false
            bubbleUpCreateNew: true
            fuzzThreshold: 0.2
    randomNote: {}
    insertNote:
        initialValue: templates
    insertNoteLink:
        aliasMode: none
        enableMultiSelect: false
    insertNoteIndex:
        enableMarker: false
workspace:
    vaults: []
    journal:
        dailyDomain: daily
        name: journal
        dateFormat: y.MM.dd
        addBehavior: childOfDomain
    scratch:
        name: scratch
        dateFormat: y.MM.dd.HHmmss
        addBehavior: asOwnDomain
    task:
        name: ''
        dateFormat: ''
        addBehavior: childOfCurrent
        statusSymbols:
            '': ' '
            wip: w
            done: x
            assigned: a
            moved: m
            blocked: b
            delegated: l
            dropped: d
            pending: 'y'
        prioritySymbols:
            H: high
            M: medium
            L: low
        todoIntegration: false
        createTaskSelectionType: selection2link
    graph:
        zoomSpeed: 1
    enableAutoCreateOnDefinition: false
    enableXVaultWikiLink: false
    enableRemoteVaultInit: true
    enableUserTags: true
    enableHashTags: true
    workspaceVaultSyncMode: noCommit
    enableAutoFoldFrontmatter: false
    enableEditorDecorations: true
    maxPreviewsCached: 10
    maxNoteLength: 204800
preview:
    enableFMTitle: true
    enableNoteTitleForLink: true
    enableMermaid: true
    enablePrettyRefs: true
    enableKatex: true
    automaticallyShowPreview: false
publishing:
    copyAssets: true
    enablePrettyRefs: true
    siteHierarchies:
        - root
    writeStubs: false
    enableContainers: false
    generateChangelog: false
    siteRootDir: docs
    seo:
        title: Dendron
        description: Personal Knowledge Space
    github:
        enableEditLink: true
        editLinkText: Edit this page on GitHub
        editBranch: main
        editViewMode: tree
    enableSiteLastModified: true
    enableFrontmatterTags: true
    enableHashesForFMTags: false
    enableRandomlyColoredTags: true
    enablePrettyLinks: true
"
`;

exports[`init convert workspace ok: diff root name 1`] = `"dendron.code-workspace dendron.yml fooVault hooks seed.yml"`;

exports[`init convert workspace ok: diff root name 2`] = `
"version: 5
useFMTitle: true
useNoteTitleForLink: true
mermaid: true
useKatex: true
dev:
    enablePreviewV2: true
commands:
    lookup:
        note:
            selectionMode: extract
            confirmVaultOnCreate: true
            vaultSelectionModeOnCreate: smart
            leaveTrace: false
            bubbleUpCreateNew: true
            fuzzThreshold: 0.2
    randomNote: {}
    insertNote:
        initialValue: templates
    insertNoteLink:
        aliasMode: none
        enableMultiSelect: false
    insertNoteIndex:
        enableMarker: false
workspace:
    vaults:
        -
            fsPath: fooVault
    journal:
        dailyDomain: daily
        name: journal
        dateFormat: y.MM.dd
        addBehavior: childOfDomain
    scratch:
        name: scratch
        dateFormat: y.MM.dd.HHmmss
        addBehavior: asOwnDomain
    task:
        name: ''
        dateFormat: ''
        addBehavior: childOfCurrent
        statusSymbols:
            '': ' '
            wip: w
            done: x
            assigned: a
            moved: m
            blocked: b
            delegated: l
            dropped: d
            pending: 'y'
        prioritySymbols:
            H: high
            M: medium
            L: low
        todoIntegration: false
        createTaskSelectionType: selection2link
    graph:
        zoomSpeed: 1
    enableAutoCreateOnDefinition: false
    enableXVaultWikiLink: false
    enableRemoteVaultInit: true
    enableUserTags: true
    enableHashTags: true
    workspaceVaultSyncMode: noCommit
    enableAutoFoldFrontmatter: false
    enableEditorDecorations: true
    maxPreviewsCached: 10
    maxNoteLength: 204800
preview:
    enableFMTitle: true
    enableNoteTitleForLink: true
    enableMermaid: true
    enablePrettyRefs: true
    enableKatex: true
    automaticallyShowPreview: false
publishing:
    copyAssets: true
    enablePrettyRefs: true
    siteHierarchies:
        - root
    writeStubs: false
    enableContainers: false
    generateChangelog: false
    siteRootDir: docs
    seo:
        title: Dendron
        description: Personal Knowledge Space
    github:
        enableEditLink: true
        editLinkText: Edit this page on GitHub
        editBranch: main
        editViewMode: tree
    enableSiteLastModified: true
    enableFrontmatterTags: true
    enableHashesForFMTags: false
    enableRandomlyColoredTags: true
    enablePrettyLinks: true
    duplicateNoteBehavior:
        action: useVault
        payload:
            - fooVault
"
`;

exports[`init convert workspace ok: diff root name 3`] = `
"id: dendron.foo
name: foo
publisher: dendron
description: some foo
license: CC
root: fooVault
repository:
    type: git
    url: ''
"
`;

exports[`init create workspace basic 1`] = `".gitignore dendron.code-workspace dendron.yml hooks seed.yml vault"`;

exports[`init create workspace basic 2`] = `
"version: 5
useFMTitle: true
useNoteTitleForLink: true
mermaid: true
useKatex: true
dev:
    enablePreviewV2: true
commands:
    lookup:
        note:
            selectionMode: extract
            confirmVaultOnCreate: true
            vaultSelectionModeOnCreate: smart
            leaveTrace: false
            bubbleUpCreateNew: true
            fuzzThreshold: 0.2
    randomNote: {}
    insertNote:
        initialValue: templates
    insertNoteLink:
        aliasMode: none
        enableMultiSelect: false
    insertNoteIndex:
        enableMarker: false
workspace:
    vaults:
        -
            fsPath: vault
    journal:
        dailyDomain: daily
        name: journal
        dateFormat: y.MM.dd
        addBehavior: childOfDomain
    scratch:
        name: scratch
        dateFormat: y.MM.dd.HHmmss
        addBehavior: asOwnDomain
    task:
        name: ''
        dateFormat: ''
        addBehavior: childOfCurrent
        statusSymbols:
            '': ' '
            wip: w
            done: x
            assigned: a
            moved: m
            blocked: b
            delegated: l
            dropped: d
            pending: 'y'
        prioritySymbols:
            H: high
            M: medium
            L: low
        todoIntegration: false
        createTaskSelectionType: selection2link
    graph:
        zoomSpeed: 1
    enableAutoCreateOnDefinition: false
    enableXVaultWikiLink: false
    enableRemoteVaultInit: true
    enableUserTags: true
    enableHashTags: true
    workspaceVaultSyncMode: noCommit
    enableAutoFoldFrontmatter: false
    enableEditorDecorations: true
    maxPreviewsCached: 10
    maxNoteLength: 204800
preview:
    enableFMTitle: true
    enableNoteTitleForLink: true
    enableMermaid: true
    enablePrettyRefs: true
    enableKatex: true
    automaticallyShowPreview: false
publishing:
    copyAssets: true
    enablePrettyRefs: true
    siteHierarchies:
        - root
    writeStubs: false
    enableContainers: false
    generateChangelog: false
    siteRootDir: docs
    seo:
        title: Dendron
        description: Personal Knowledge Space
    github:
        enableEditLink: true
        editLinkText: Edit this page on GitHub
        editBranch: main
        editViewMode: tree
    enableSiteLastModified: true
    enableFrontmatterTags: true
    enableHashesForFMTags: false
    enableRandomlyColoredTags: true
    enablePrettyLinks: true
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault
"
`;

exports[`init create workspace basic 3`] = `
"id: dendron.foo
name: foo
publisher: dendron
description: some foo
license: CC
root: vault
repository:
    type: git
    url: ''
"
`;

exports[`remove error: nothing to remove 1`] = `
Object {
  "error": [DendronError: seed with id dendron.no-exist not in dendron.yml],
}
`;
